updating js and html
update with link to db.
Still got pb.

--- a/inteface/create.html
+++ b/inteface/create.html
@@ -16,10 +16,7 @@
 <input class="col-xs-5 col-sm-4 col-md-4 col-lg-4 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" type="text" id="name" name="name" class="form-control" placeholder="Enter Name" />  </div> </br></br></br> 
 <label class="col-xs-4 col-sm-3 col-md-3 col-lg-2 col-xs-offset-1 col-sm-offset-2 col-md-offset-2 col-lg-offset-3" id="instrumentlabel">Instrument:</label>
 <SELECT class="col-xs-5 col-sm-4 col-md-4 col-lg-4 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" id ="instrument" name="instrument" class="form-control">
-		<OPTION VALUE="Selection">Selection...</OPTION>
-		<OPTION VALUE="MERIS">MERIS</OPTION>
-		<OPTION VALUE="VIIRS">VIIRS</OPTION>  <!-- This is not totally right, but since it's just an exemple  the select will need to fill himself -->
-		<OPTION VALUE="AATRS">AATRS</OPTION>
+		<OPTION VALUE="Selection" selected='selected'></OPTION>
 	</SELECT></br></br>
 
 <div class="addlabel">You can also add an instrument <a href="instrument.html"> here </a>  </div> </br>	
