--- a/inteface/searchmeasurements.html
+++ b/inteface/searchmeasurements.html
@@ -3,6 +3,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/stylemeasure.css" />
+  <link rel="stylesheet" href="jquery-jvectormap-1.2.2.css" type="text/css" media="screen"/>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="jquery-jvectormap-1.2.2.min.js"></script>
+  <script src="jquery-jvectormap-world-mill-en.js"></script>
+  <script src="jquery-jvectormap-us-aea-en.js"></script>
+  <script src="DataTables/media/js/jquery.dataTables.js"></script>
+  <script type="text/javascript" src="http://www.kunalbabre.com/projects/table2CSV.js" > </script> 
 </head>
 <body>
 <title>TOUCAN - Search measurements</title>
@@ -10,39 +17,37 @@
 </br>
 </br>
 <label class="col-xs-5 col-sm-3 col-md-2 col-lg-2 col-xs-offset-0 col-sm-offset-2 col-md-offset-3 col-lg-offset-3" id="deploymentlabel">Deployment:</label>
-<SELECT id ="deployment" name="DEPLOYMENT" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-		<OPTION VALUE="Selection">Selection...</OPTION>
-		<OPTION VALUE="ChesapeakeBay">ChesapeakeBay</OPTION>
-		<OPTION VALUE="LJCO">LJCO</OPTION>  <!-- This is not totally right, but since it's just an exemple  the select will need to fill himself -->
-		<OPTION VALUE="AbuAlBukhoosh">AbuAlBukhoosh</OPTION>
+<SELECT id ="deployment" name="DEPLOYMENT" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" multiple>
+<Option value='Selection' selected="selected"> </option>
 	</SELECT>
+
 	</br></br>
 
 <label class="col-xs-5 col-sm-3 col-md-2 col-lg-2 col-xs-offset-0 col-sm-offset-2 col-md-offset-3 col-lg-offset-3" id="typelabel">Measurement type:</label>
-<SELECT id ="type" name="TYPE" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-		<OPTION VALUE="Selection">Selection...</OPTION>
-		<OPTION VALUE="rho_wn_is">rho_wn_is</OPTION>
-		<OPTION VALUE="lw_is">lw_is</OPTION>  <!-- This is not totally right, but since it's just an exemple  the select will need to fill himself -->
-		<OPTION VALUE="es_is">es_is</OPTION>
+<SELECT id ="type" name="TYPE" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" multiple >
+<Option value='Selection' selected="selected"> </option>
 	</SELECT>
+
 	</br></br>
 
 <label class="col-xs-5 col-sm-3 col-md-2 col-lg-2 col-xs-offset-0 col-sm-offset-2 col-md-offset-3 col-lg-offset-3" id="wavelabel">Wavelengths:</label>
-<SELECT id ="wavelengths" name="WAVELENGTHS" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-		<OPTION VALUE="Selection">Selection...</OPTION>
-		<OPTION VALUE="412.0">412.0</OPTION>
-		<OPTION VALUE="443.0">443.0</OPTION>  <!-- This is not totally right, but since it's just an exemple  the select will need to fill himself -->
-		<OPTION VALUE="490.0">490.0</OPTION>
+<SELECT id ="wavelengths" name="WAVELENGTHS" class=" col-xs-4 col-sm-3 col-md-3 col-lg-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" multiple>
+<Option value='Selection' selected="selected"> </option>
 	</SELECT>
 	</br>	</br>
-	
-	
-	
-	
-<div id ='message' class="message"></div> </br>
+	</br>	</br>
+</br>	</br>
+</br>	</br>
+</br>	</br>
 
-<div class="center"><input type="button" id="submit"  class="btn btn-primary submit " value="Submit" onClick="submit()"> 
+	
+	
+	
+
+
+<div class="center"><input type="button" id="submit"  class="btn btn-primary submit " value="Submit" > 
 <input type="button" id="cancel"  class="btn btn-danger cancel" value="Cancel" onclick="self.location.href='menu.html'"> </div> 
+<div id ='message' class="message"></div> </br>
 
 <script src="https://code.jquery.com/jquery.js"></script>
  <script src="bootstrap/js/bootstrap.min.js"></script>
